// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect TreeSelect Custom Icons should \`treeIcon\` work 1`] = `
<div
  class="ant-select ant-tree-select ant-select-single ant-select-show-arrow ant-select-open"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-placeholder"
    />
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-tree-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
      style="opacity: 0; pointer-events: none; min-width: 0; width: 0px;"
    >
      <div>
        <div>
          <div
            class="ant-select-tree"
            role="tree"
          >
            <div>
              <input
                aria-label="for screen reader"
                disabled=""
                style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                value=""
              />
            </div>
            <div
              aria-hidden="true"
              class="ant-select-tree-treenode"
              style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
            >
              <div
                class="ant-select-tree-indent"
              >
                <div
                  class="ant-select-tree-indent-unit"
                />
              </div>
            </div>
            <div
              class="ant-select-tree-list"
              style="position: relative;"
            >
              <div
                class="ant-select-tree-list-holder"
                style="max-height: 256px; overflow-y: auto;"
              >
                <div>
                  <div
                    class="ant-select-tree-list-holder-inner"
                    style="display: flex; flex-direction: column;"
                  >
                    <div
                      aria-grabbed="false"
                      class="ant-select-tree-treenode ant-select-tree-treenode-switcher-close ant-select-tree-treenode-leaf-last"
                      draggable="false"
                    >
                      <span
                        aria-hidden="true"
                        class="ant-select-tree-indent"
                      />
                      <span
                        class="ant-select-tree-switcher ant-select-tree-switcher-noop"
                      />
                      <span
                        class="ant-select-tree-node-content-wrapper ant-select-tree-node-content-wrapper-normal"
                        title="parent 1"
                      >
                        <span
                          class="ant-select-tree-iconEle ant-select-tree-icon__customize"
                        >
                          <span>
                            Bamboo
                          </span>
                        </span>
                        <span
                          class="ant-select-tree-title"
                        >
                          parent 1
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="arrow-up"
      class="anticon anticon-arrow-up ant-select-suffix"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="arrow-up"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 6.81l3.97 3.97a.75.75 0 101.06-1.06l-4.5-4.5a.75.75 0 00-1.06 0l-4.5 4.5a.75.75 0 101.06 1.06L8 6.81z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`TreeSelect TreeSelect Custom Icons should support customized icons 1`] = `
<div
  class="ant-select ant-tree-select ant-select-multiple ant-select-allow-clear ant-select-show-search"
>
  <div
    class="ant-select-selector"
  >
    <div
      class="ant-select-selection-overflow"
    >
      <div
        class="ant-select-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="ant-select-selection-item"
          title="my leaf"
        >
          <span
            class="ant-select-selection-item-content"
          >
            my leaf
          </span>
          <span
            aria-hidden="true"
            class="ant-select-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span>
              remove
            </span>
          </span>
        </span>
      </div>
      <div
        class="ant-select-selection-overflow-item"
        style="opacity: 1;"
      >
        <span
          class="ant-select-selection-item"
          title="your leaf"
        >
          <span
            class="ant-select-selection-item-content"
          >
            your leaf
          </span>
          <span
            aria-hidden="true"
            class="ant-select-selection-item-remove"
            style="user-select: none;"
            unselectable="on"
          >
            <span>
              remove
            </span>
          </span>
        </span>
      </div>
      <div
        class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
        style="opacity: 1;"
      >
        <div
          class="ant-select-selection-search"
          style="width: 0px;"
        >
          <input
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="ant-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
          <span
            aria-hidden="true"
            class="ant-select-selection-search-mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    class="ant-select-clear"
    style="user-select: none;"
    unselectable="on"
  >
    <span>
      clear
    </span>
  </span>
</div>
`;

exports[`TreeSelect rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-select ant-tree-select ant-select-rtl ant-select-single ant-select-show-arrow"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="arrow-down"
      class="anticon anticon-arrow-down ant-select-suffix"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="arrow-down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
        />
      </svg>
    </span>
  </span>
</div>
`;
